--- a/appstate.json
+++ b/appstate.json
@@ -1,7 +1,92 @@
-....
-
-
-        𝐚dd 𝐲𝐨𝐮𝐫 𝐜𝟑𝐜 𝐅𝐛𝐬𝐭𝐚𝐭𝐞 𝐜𝐨𝐨𝐤𝐢𝐞 🍪
-
-
-.....
+[
+    {
+        "key": "dbln",
+        "value": "%7B%2261575747162518%22%3A%22kCUeHiIs%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-05-06T16:00:02.513Z",
+        "lastAccessed": "2025-05-06T16:00:02.516Z"
+    },
+    {
+        "key": "datr",
+        "value": "giEaaApdjf3icJvg1tnP-8xV",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-06T16:00:02.516Z",
+        "lastAccessed": "2025-05-06T16:00:02.516Z"
+    },
+    {
+        "key": "sb",
+        "value": "giEaaH1058RfRL-cstYgTeFk",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-06T16:00:02.516Z",
+        "lastAccessed": "2025-05-06T16:00:02.516Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61575747162518",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-06T16:00:02.516Z",
+        "lastAccessed": "2025-05-06T16:00:02.516Z"
+    },
+    {
+        "key": "fr",
+        "value": "0Uep7qMfQZDcP9cUm.AWfy8FqdeFCQkpd_dCvnwDDFJ4YYAVVfnf7o4gMRVLYEAavwHLk.BoGiGC..AAA.0.0.BoGiGp.AWfrJbiH33agP_j87rwxqOAU5DU",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-06T16:00:02.516Z",
+        "lastAccessed": "2025-05-06T16:00:02.517Z"
+    },
+    {
+        "key": "xs",
+        "value": "9%3AqsFNBYE4N-d2Dg%3A2%3A1746543020%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-06T16:00:02.517Z",
+        "lastAccessed": "2025-05-06T16:00:02.517Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_GB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-06T16:00:02.517Z",
+        "lastAccessed": "2025-05-06T16:00:02.517Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B832x424x1.445365309715271",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-06T16:00:02.517Z",
+        "lastAccessed": "2025-05-06T16:00:02.517Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100430831%3BT%3A29109119",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-06T16:00:02.517Z",
+        "lastAccessed": "2025-05-06T16:00:02.517Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2806%3Btimestamp%3A1746547199",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-06T16:00:02.517Z",
+        "lastAccessed": "2025-05-06T16:00:02.517Z"
+    }
+]
